# MMKV

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.TXT  MMKV.podspec  MMKVAppExtension.podspec  MMKVCore.podspec  MMKVCoreFlutter.podspec  MMKVWatchExtension.podspec  Makefile  Package.swift  README.md  README_CN.md  SECURITY.md  files  plan.md  readme.md  readme_cn.md
.claude/: settings.json
.github/: FUNDING.yml
Android/: readme.md
Android/MMKV/mmkv/: CMakeLists.txt  build.gradle  gradle.properties  pom.xml  proguard-rules.pro
Android/MMKV/mmkv/src/androidTest/: AndroidManifest.xml
Android/MMKV/mmkv/src/androidTest/java/com/tencent/mmkv/: ExampleInstrumentedTest.java  MMKVTest.java  MMKVTestService.java
Android/MMKV/mmkv/src/main/: AndroidManifest.xml
Android/MMKV/mmkv/src/main/aidl/com/tencent/mmkv/: ParcelableMMKV.aidl
Android/MMKV/mmkv/src/main/cpp/: CodedInputData.cpp  CodedInputData.h  CodedOutputData.cpp  CodedOutputData.h  InterProcessLock.cpp  InterProcessLock.h  MMBuffer.cpp  MMBuffer.h  MMKV.cpp  MMKV.h  MMKVLog.cpp  MMKVLog.h  MMKVMetaInfo.hpp  MiniPBCoder.cpp  MiniPBCoder.h  MmapedFile.cpp  MmapedFile.h  PBEncodeItem.hpp  PBUtility.cpp  PBUtility.h  ScopedLock.hpp  ThreadLock.cpp  ThreadLock.h  ValueInfo.cpp  ValueInfo.h  ValueType.cpp  ValueType.h  WireFormat.h  flutter-bridge.cpp  native-bridge.cpp  native-bridge.h
Android/MMKV/mmkv/src/main/cpp/aes/: AESCrypt.cpp  AESCrypt.h  aes_crypt.c  aes_crypt.h
Android/MMKV/mmkv/src/main/cpp/aes/openssl/: aes.h  aes_cbc.c  aes_cfb.c  aes_core.c  cbc128.c  cfb128.c  md32_common.h  md5_locl.h  md5_one.c  modes.h
Android/MMKV/mmkv/src/main/java/com/tencent/mmkv/: JNIDelegate.java  MMKV.java  MMKVConfig.java  MMKVContentChangeNotification.java  MMKVContentProvider.java  MMKVHandler.java  MMKVLogLevel.java  MMKVProcessUtil.java  MMKVRecoverStrategic.java  NameSpace.java  NativeBuffer.java  ParcelableMMKV.java  UnsupportedArchitectureException.java
Android/MMKV/mmkv/src/main/java/dalvik/annotation/optimization/: FastNative.java
Android/MMKV/mmkv/src/test/java/com/tencent/mmkv/: ExampleUnitTest.java
Core/: .gitignore  CMakeLists.txt  CodedInputData.cpp  CodedInputData.h  CodedInputDataCrypt.cpp  CodedInputDataCrypt.h  CodedInputDataCrypt_OSX.cpp  CodedInputData_OSX.cpp  CodedOutputData.cpp  CodedOutputData.h  CodedOutputData_OSX.cpp  InterProcessLock.cpp  InterProcessLock.h  InterProcessLock_Android.cpp  InterProcessLock_Win32.cpp  KeyValueHolder.cpp  KeyValueHolder.h  MMBuffer.cpp  MMBuffer.h  MMKV.cpp  MMKV.h  MMKVHandler.h  MMKVLog.cpp  MMKVLog.h  MMKVLog_Android.cpp  MMKVMetaInfo.hpp  MMKVPredef.h  MMKV_Android.cpp  MMKV_IO.cpp  MMKV_IO.h  MMKV_OSX.cpp  MMKV_OSX.h  MemoryFile.cpp  MemoryFile.h  MemoryFile_Android.cpp  MemoryFile_Linux.cpp  MemoryFile_OSX.cpp  MemoryFile_Win32.cpp  MiniPBCoder.cpp  MiniPBCoder.h  (+10 more)
Core/Core.xcodeproj/: project.pbxproj
Core/Core.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Core/Core.xcodeproj/xcshareddata/xcschemes/: Core.xcscheme  MMKVWatchCore.xcscheme
Core/aes/: AESCrypt.cpp  AESCrypt.h
Core/aes/openssl/: CMakeLists.txt  aes_core.c  modes.h  openssl_aes-armv4.S  openssl_aes.h  openssl_aes_cfb.cpp  openssl_aes_core.cpp  openssl_aes_locl.h  openssl_aesv8-armx.S  openssl_arm_arch.h  openssl_cfb128.cpp  openssl_md32_common.h  openssl_md5.h  openssl_md5_locl.h  openssl_md5_one.cpp
Core/aes/openssl/include/: dummy.h
Core/cbridge/: MMKVBridge.cpp  MMKVBridge.h
Core/crc32/: CMakeLists.txt  Checksum.h  crc32_armv8.cpp
Core/crc32/zlib/: CMakeLists.txt  crc32.cpp  zconf.h  zutil.h
Core/fakeinclude/MMKVCore/: MMBuffer.h  MMKVHandler.h  MMKVLog.h  MMKVPredef.h  MemoryFile.h  MiniPBCoder.h  ScopedLock.hpp  ThreadLock.h
Core/include/MMKVCore/: MMBuffer.h  MMKVLog.h
KMP/: .gitignore  .internal-dev-notes.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
KMP/mmkv/nativeInterop/: CMakeLists.txt
KMP/mmkv/nativeInterop/cinterop/: MMKVBridge.h  mmkv.def
Linux/: CMakeLists.txt
Linux/demo/: CMakeLists.txt  main.cpp  process.cpp
Linux/src/: CMakeLists.txt  CodedInputData.cpp  CodedInputData.h  CodedOutputData.cpp  CodedOutputData.h  InterProcessLock.cpp  InterProcessLock.h  MMBuffer.h  MMKV.cpp  MMKV.h  MMKVLog.cpp  MMKVLog.h  MMKVMetaInfo.hpp  MiniPBCoder.cpp  MiniPBCoder.h  MmapedFile.cpp  MmapedFile.h  PBUtility.cpp  PBUtility.h  ScopedLock.hpp  ThreadLock.cpp  ThreadLock.h  native-bridge.cpp  native-bridge.h
Linux/src/aes/: AESCrypt.cpp  AESCrypt.h
MMKV.xcworkspace/: contents.xcworkspacedata
OpenHarmony/: .gitignore  build-profile.json5  hvigorfile.ts  hvigorw  hvigorw.bat  oh-package-lock.json5  oh-package.json5
OpenHarmony/MMKV/src/main/cpp/: CMakeLists.txt  flutter-bridge.cpp  napi_init.cpp  native_bridge.cpp
OpenHarmony/MMKV/src/main/cpp/types/libmmkv/: index.d.ts  oh-package.json5
OpenHarmony/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
OpenHarmony/entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
POSIX/: CMakeLists.txt
POSIX/demo/: CMakeLists.txt  TestInterProcessLock.cpp  UnitTest.cpp  demo.cpp  demo_c.c  main.cpp  process.cpp
POSIX/golang/: .gitignore  CMakeLists.txt  callback.go  go.mod  golang-bridge.cpp  golang-bridge.h  libmmkv_golang.cpp  mmkv.go  mmkv_test.go
POSIX/golang/test/: demo.go  go.mod  main.go
POSIX/src/: CMakeLists.txt  CodedInputData.cpp  CodedOutputData.cpp  CodedOutputData.h  MMKV.cpp  MMKV.h  MMKVMetaInfo.hpp  MiniPBCoder.cpp  MiniPBCoder.h  MmapedFile.cpp  PBEncodeItem.hpp  ScopedLock.hpp  libmmkv.cpp
POSIX/src/aes/: AESCrypt.h
POSIX/src/aes/openssl/: aes_locl.h  md5.h
POSIX/src/crc32/zlib/: crc32.cpp  zutil.h
Python/: CMakeLists.txt  README.md  demo.py  libmmkv_python.cpp  setup.py  unit_test.py
Script/: dumpJavaSignature.py  formatCode.py
Win32/: .clang-format  Win32.sln
flutter/: .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
flutter/mmkv_win32/windows/: CMakeLists.txt  flutter-bridge.cpp
iOS/: MMKV.podspec  (+5 more)
(+498 files in other folders)
